--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -87,35 +87,206 @@
 	<!-- container -->
 	<div class="container">
 
-		<h2 class="text-center top-space">Frequently Asked Questions</h2>
+		<h2 class="text-center top-space">NATIONAL AWARDS</h2>
 		<br>
 
 		<div class="row">
 			<div class="col-sm-6">
-				<h3>Which code editor would you recommend?</h3>
-				<p>I'd highly recommend you <a href="http://www.sublimetext.com/">Sublime Text</a> - a free to try text editor which I'm using daily. Awesome tool!</p>
-			</div>
-			<div class="col-sm-6">
-				<h3>Nice header. Where do I find more images like that one?</h3>
-				<p>
-					Well, there are thousands of stock art galleries, but personally, 
-					I prefer to use photos from these sites: <a href="http://unsplash.com">Unsplash.com</a> 
-					and <a href="http://www.flickr.com/creativecommons/by-2.0/tags/">Flickr - Creative Commons</a></p>
-			</div>
-		</div> <!-- /row -->
+				<div id="myCarousel" class="carousel slide" data-ride="carousel">
+					<!-- Indicators -->
+					<ol class="carousel-indicators">
+					  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+					  <li data-target="#myCarousel" data-slide-to="1"></li>
+					  <li data-target="#myCarousel" data-slide-to="2"></li>
+					  <li data-target="#myCarousel" data-slide-to="3"></li>
+					  <li data-target="#myCarousel" data-slide-to="4"></li>
+					  <li data-target="#myCarousel" data-slide-to="5"></li>
+					  <li data-target="#myCarousel" data-slide-to="6"></li>
+					  <li data-target="#myCarousel" data-slide-to="7"></li>
+					  <li data-target="#myCarousel" data-slide-to="8"></li>
+					  <li data-target="#myCarousel" data-slide-to="9"></li>
+					  <li data-target="#myCarousel" data-slide-to="10"></li>
+					  <li data-target="#myCarousel" data-slide-to="11"></li>
+					  <li data-target="#myCarousel" data-slide-to="12"></li>
+					  <li data-target="#myCarousel" data-slide-to="13"></li>
+					  <li data-target="#myCarousel" data-slide-to="14"></li>
 
-		<div class="row">
-			<div class="col-sm-6">
-				<h3>Can I use it to build a site for my client?</h3>
-				<p>
-					Yes, you can. You may use this template for any purpose, just don't forget about the <a href="http://creativecommons.org/licenses/by/3.0/">license</a>, 
-					which says: "You must give appropriate credit", i.e. you must provide the name of the creator and a link to the original template in your work. 
-				</p>
+					</ol>
+				
+					<!-- Wrapper for slides -->
+					<div class="carousel-inner">
+					  <div class="item active">
+						<img src="../static/images/ua4.png"  style="width:100%; height:400px;">
+						<div class="carousel-caption">
+						  <h3>Academic Rewards</h3>
+						  <p>Top ten schools in overall performance for the year 2016 at the Higher Secondary Levels (Class XII)</p>
+						</div>
+					  </div>
+				
+					  <div class="item">
+						<img src="../static/images/ua45.png" alt="Chicago" style="width:100%; height:400px;">
+						<div class="carousel-caption">
+						  <h3>Academic Rewards</h3>
+						  <p>Top ten schools in overall performance for the year 2016 at the Middle Secondary Level (Class X)
+
+						</p>
+						</div>
+					  </div>
+
+					  <div class="item">
+						  <img src="../static/images/ua6.png" alt="Chicago" style="width:100%; height:400px;">
+						  <div class="carousel-caption">
+							<h3>Academic Rewards</h3>
+							<p>Top ten school in overall performance for the year 2015 at the Middle Secondary Level (Class X)
+
+							</p>
+						  </div>
+						</div>
+						<div class="item">
+							<img src="../static/images/ua7.png" alt="Chicago" style="width:100%; height:400px;">
+							<div class="carousel-caption">
+							  <h3>Academic Rewards</h3>
+							  <p>Top ten school in overall performance for the year 2015 at the Higher Secondary Level (Class XII)
+
+							</p>
+							</div>
+						  </div>
+	
+						  <div class="item">
+							  <img src="../static/images/ua8.png" alt="Chicago" style="width:100%; height:400px;">
+							  <div class="carousel-caption">
+								<h3>Academic Rewards</h3>
+								<p>Top ten school in overall performance for the year 2014 at the Middle Secondary Level (Class X)</p>
+							  </div>
+							</div>
+							<div class="item">
+								<img src="../static/images/ua9.png" alt="Chicago" style="width:100%; height:400px;">
+								<div class="carousel-caption">
+								  <h3>Academic Rewards</h3>
+								  <p>Top ten school in overall performance for the year 2014 at the Higher Secondary Level (Class XII)
+
+								</p>
+								</div>
+							  </div>
+		
+							  <div class="item">
+								  <img src="../static/images/ua10.png" alt="Chicago" style="width:100%; height:400px;">
+								  <div class="carousel-caption">
+									<h3>Academic Rewards</h3>
+									<p>Top ten school in overall performance for the year 2013 at the Middle Secondary Level (Class X)
+									</p>
+								  </div>
+								</div>
+								<div class="item">
+									<img src="../static/images/ua11.png" alt="Chicago" style="width:100%; height:400px;">
+									<div class="carousel-caption">
+									  <h3>Academic Rewards</h3>
+									  <p>Top ten school in overall performance for the year 2013 at the Higher Secondary Level (Class XII)</p>
+									</div>
+								  </div>
+			
+								  <div class="item">
+									  <img src="../static/images/ua12.png" alt="Chicago" style="width:100%; height:400px;">
+									  <div class="carousel-caption">
+										<h3>Academic Rewards</h3>
+										<p>Top ten school in overall performance for the year 2012 at the Higher Secondary Level (Class XII)</p>
+									  </div>
+									</div>
+									<div class="item">
+										<img src="../static/images/ua13.png" alt="Chicago" style="width:100%; height:400px;">
+										<div class="carousel-caption">
+										  <h3>Academic Rewards</h3>
+										  <p>Top ten school in overall performance for the year 2012 at the Middle Secondary Level (Class X)</p>
+										</div>
+									  </div>
+				
+									  <div class="item">
+										  <img src="../static/images/ua14.png" alt="Chicago" style="width:100%; height:400px;">
+										  <div class="carousel-caption">
+											<h3>Academic Rewards</h3>
+											<p>Top ten school in overall performance for the year 2011 at the Middle Secondary Level (Class X)
+
+											</p>
+										  </div>
+										</div>
+										<div class="item">
+											<img src="../static/images/ua15.png" alt="Chicago" style="width:100%; height:400px;">
+											<div class="carousel-caption">
+											  <h3>Academic Rewards</h3>
+											  <p>Top ten school in overall performance for the year 2011 at the Higher Secondary Level (Class XII)</p>
+											</div>
+										  </div>
+										  <div class="item">
+											  <img src="../static/images/ua16.png" alt="Chicago" style="width:100%; height:400px;">
+											  <div class="carousel-caption">
+												<h3>Academic Rewards</h3>
+												<p>Top ten school in overall performance for the year 2010 at the Middle Secondary Level (Class X)
+
+												</p>
+											  </div>
+											</div>
+					  
+											<div class="item">
+												<img src="../static/images/ua17.png" alt="Chicago" style="width:100%; height:400px;">
+												<div class="carousel-caption-info">
+												  <h3>Academic Rewards</h3>
+												  <p>Top ten school in overall performance for the year 2010 at the Higher Secondary Level (Class XII)</p>
+												</div>
+											  </div>
+					  <div class="item">
+						<img src="../static/images/ua18.png" alt="New York" style="width:100%;height:400px;">
+						<div class="carousel-caption">
+						  <h3>Academic Rewards</h3>
+						  <p>Top ten school in overall performance for the year 209 at the Middle Secondary Level (Class X)
+
+						</p>
+						</div>
+					  </div>
+				  
+					</div>
+				
+					<!-- Left and right controls -->
+					
+				  </div>
+
 			</div>
 			<div class="col-sm-6">
-				<h3>Can you customize this template for me?</h3>
-				<p>Yes, I can. Please drop me a line to sergey-at-pozhilov.com and describe your needs in details. Please note, my services are not cheap.</p>
-			</div>
+					<div id="myCarousel" class="carousel slide" data-ride="carousel">
+					  <!-- Indicators -->
+					  <ol class="carousel-indicators">
+						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+						<li data-target="#myCarousel" data-slide-to="1"></li>
+						<li data-target="#myCarousel" data-slide-to="2"></li>
+					  </ol>
+				  
+					  <!-- Wrapper for slides -->
+					  <div class="carousel-inner">
+						<div class="item active">
+						  <img src="../static/images/ua1.png"  style="width:100%; height:400px;">
+						  <div class="carousel-caption">
+							<h3>Games and Sports</h3>
+							<p>Winner in Boys Football event during the National School Football and Traditional Archery Tournament for HSS</p>
+						  </div>
+						</div>
+				  
+						<div class="item">
+						  <img src="../static/images/ua2.png" alt="Chicago" style="width:100%; height:400px;">
+						  <div class="carousel-caption">
+							<h3>Games and Sports</h3>
+							<p>Winner in Boys Volley ball event during the 14th National School Games</p>
+						  </div>
+						</div>
+
+						<div class="item">
+							<img src="../static/images/ua3.png" alt="Chicago" style="width:100%; height:400px;">
+							<div class="carousel-caption">
+							  <h3>Games and Sports</h3>
+							  <p>Winner in Boys Basketball event during 14th National School Games</p>
+							</div>
+						  </div>
+				  </div>
+				</div>
+				</div>
 		</div> <!-- /row -->
 
 		<div class="jumbotron top-space">
