--- a/app/home/templates/layouts/main.html
+++ b/app/home/templates/layouts/main.html
@@ -14,7 +14,12 @@
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="../static/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../static/css/font-awesome.min.css">
+	<meta charset="utf-8">jquery.min.js"></script>
 
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	<!-- Custom styles for our template -->
 	<link rel="stylesheet" href="../static/css/bootstrap-theme.css" media="screen" >
 	<link rel="stylesheet" href="../static/css/main.css">
