--- a/app/home/templates/layouts/enroll_main.html
+++ b/app/home/templates/layouts/enroll_main.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
-	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
-	
+	<meta name="author" content="Sergey Pozhilov (GetTemplate.com)">
+
 	<title>student Management</title>
 
 	<link rel="shortcut icon" href="../static/images/gt_favicon.png">
-	
+
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="../static/css/bootstrap.min.css">
 	<link rel="stylesheet" href="../static/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../static/css/enroll.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Neuton:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Neuton:wght@400;700&display=swap" rel="stylesheet">
 
 	<!-- Custom styles for our template -->
-	<link rel="stylesheet" href="../static/css/bootstrap-theme.css" media="screen" >
+	<link rel="stylesheet" href="../static/css/bootstrap-theme.css" media="screen">
 	<link rel="stylesheet" href="../static/css/main.css">
+
+	<link href="../static/vendor/formValidation/tachyons.min.css" type="text/css" rel="stylesheet" />
+	<link href="../static/vendor/formValidation/formValidation.min.css" type="text/css" rel="stylesheet" />
+
 
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
@@ -29,25 +34,37 @@
 	<![endif]-->
 </head>
 
-<body >
-    <!-- Topbar Start -->
-                
-                {% block content %}
-                {% endblock content %}
-            
-                {% include "partials/_footerhome.html" %}
+<body>
+	<!-- Topbar Start -->
+
+	{% block content %}
+	{% endblock content %}
+
+	{% include "partials/_footerhome.html" %}
 
 
 
-    <!-- Specific JS goes HERE -->
-    {% block javascripts %}{% endblock javascripts %}
- <!-- JavaScript libs are placed at the end of the document so the pages load faster -->
- <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
- <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
- <script src="../static/js/headroom.min.js"></script>
- <script src="../static/js/jQuery.headroom.min.js"></script>
- <script src="../static/js/template.js"></script>
+	<!-- Specific JS goes HERE -->
+	{% block javascripts %}{% endblock javascripts %}
+	<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+	<script src="../static/js/headroom.min.js"></script>
+	<script src="../static/js/jQuery.headroom.min.js"></script>
+	<script src="../static/js/template.js"></script>
+
+	<script src="../static/vendor/formValidation/es6-shim.min.js"></script>
+	<script src="../static/vendor/formValidation/formValidation.min.js"></script>
+	<script src="../static/vendor/formValidation/Bootstrap.min.js"></script>
+	<script src="../static/vendor/formValidation/Tachyons.min.js"></script>
+	<script src="../static/js/enroll_student_validation.js"></script>
+
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
 </body>
+
 </html>
