--- a/app/home/templates/signin.html
+++ b/app/home/templates/signin.html
@@ -12,7 +12,7 @@
 
 	<ol class="breadcrumb">
 		<li><a href="{{url_for('home_blueprint.route_default')}}"><i class="fa fa-home"> Home</i></a></li>
-		<li class="active">Student Registration</li>
+		<li class="active">Login as admin </li>
 	</ol>
 
 	<div class="row">
@@ -20,37 +20,34 @@
 		<!-- Article main content -->
 		<article class="col-xs-12 maincontent">
 			<hr>
-
-			<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+			 <div class="col-md-6 col-md-offset-3 col-sm-6	 col-sm-offset-2"> 
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<h3 class="thin text-center">Sign in to your account</h3>
-						<p class="text-center text-muted">Lorem ipsum dolor sit amet, <a href="signup.html">Register</a>
-							adipisicing elit. Quo nulla quibusdam cum doloremque incidunt nemo sunt a tenetur omnis
-							odio. </p>
+						<h1 class="well" style="font-family: 'Neuton', serif; text-align: center;">ADMIN LOGIN</h1>
 						<hr>
-
-						<form>
-							<div class="top-margin">
-								<label>Username/Email <span class="text-danger">*</span></label>
-								<input type="text" class="form-control">
-							</div>
-							<div class="top-margin">
-								<label>Password <span class="text-danger">*</span></label>
-								<input type="password" class="form-control">
-							</div>
-
-							<hr>
-
-							<div class="row">
-								<div class="col-lg-8">
-									<b><a href="">Forgot password?</a></b>
-								</div>
-								<div class="col-lg-4 text-right">
-									<button class="btn btn-action" type="submit"><a href="{{url_for('admin_blueprint.admin_dashboard')}}">Sign in</a></button>
-								</div>
-							</div>
-						</form>
+						    <div class="well">
+								<form>
+									<div class="top-margin">
+										<label>Email  <span class="text-danger">*</span></label>
+										<input type="text" class="form-control">
+									</div>
+									<div class="top-margin">
+										<label>Password  <span class="text-danger">*</span></label>
+										<input type="password" class="form-control">
+									</div>
+										<br>
+									<hr>
+										<br>
+									<div class="row">
+										<div class="col-lg-8">
+											<b><a href="">Forgot password?</a></b>
+										</div>
+										<div class="col-lg-4 text-right">
+											<button class="btn btn-action" type="submit"><a href="{{url_for('admin_blueprint.admin_dashboard')}}">Sign in</a></button>
+										</div>
+									</div>
+								</form>
+							</div>	
 					</div>
 				</div>
 
