--- a/app/admin/templates/admin.html
+++ b/app/admin/templates/admin.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/admin_main.html' %}
 
-{% block title %} Dashboard For Bank Users {% endblock title %} 
+{% block title %} Dashboard  {% endblock title %} 
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}
 
