--- a/app/admin/templates/partials/_settings-panel.html
+++ b/app/admin/templates/partials/_settings-panel.html
@@ -1,4 +1,4 @@
-<div class="theme-setting-wrapper">
+<!-- <div class="theme-setting-wrapper">
   <div id="settings-trigger"><i class="ti-settings"></i></div>
   <div id="theme-settings" class="settings-panel">
     <i class="settings-close ti-close"></i>
@@ -15,4 +15,4 @@
       <div class="tiles default"></div>
     </div>
   </div>
-</div>
+</div> -->
