--- a/app/admin/templates/partials/_sidebar.html
+++ b/app/admin/templates/partials/_sidebar.html
@@ -9,18 +9,18 @@
     <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
         <i class="icon-layout menu-icon"></i>
-        <span class="menu-title">UI Elements</span>
+        <span class="menu-title">User Management</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="collapse" id="ui-basic">
         <ul class="nav flex-column sub-menu">
-          <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.admin_buttons')}}">Buttons</a></li>
-          <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.admin_dropdowns')}}">Dropdowns</a></li>
-          <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.admin_typography')}}">Typography</a></li>
+          <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.admin_buttons')}}">Add New User</a></li>
+          <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.admin_dropdowns')}}">User List</a></li>
+          <!-- <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.admin_typography')}}">Typography</a></li> -->
         </ul>
       </div>
     </li>
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements">
         <i class="icon-columns menu-icon"></i>
         <span class="menu-title">Form elements</span>
@@ -31,8 +31,8 @@
           <li class="nav-item"><a class="nav-link" href="{{url_for('admin_blueprint.admin_basic_elements')}}">Basic Elements</a></li>
         </ul>
       </div>
-    </li>
-    <li class="nav-item">
+    </li> -->
+    <!-- <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#charts" aria-expanded="false" aria-controls="charts">
         <i class="icon-bar-graph menu-icon"></i>
         <span class="menu-title">Charts</span>
@@ -43,8 +43,8 @@
           <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.admin_charts')}}">ChartJs</a></li>
         </ul>
       </div>
-    </li>
-    <li class="nav-item">
+    </li> -->
+    <!-- <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#tables" aria-expanded="false" aria-controls="tables">
         <i class="icon-grid-2 menu-icon"></i>
         <span class="menu-title">Tables</span>
@@ -55,8 +55,8 @@
           <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.admin_basic_tables')}}">Basic table</a></li>
         </ul>
       </div>
-    </li>
-    <li class="nav-item">
+    </li> -->
+    <!-- <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
         <i class="icon-contract menu-icon"></i>
         <span class="menu-title">Icons</span>
@@ -67,8 +67,8 @@
           <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.admin_icons')}}">Mdi icons</a></li>
         </ul>
       </div>
-    </li>
-    <li class="nav-item">
+    </li> -->
+    <!-- <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
         <i class="icon-head menu-icon"></i>
         <span class="menu-title">User Pages</span>
@@ -80,8 +80,8 @@
           <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.admin_register')}}"> Register </a></li>
         </ul>
       </div>
-    </li>
-    <li class="nav-item">
+    </li> -->
+    <!-- <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#error" aria-expanded="false" aria-controls="error">
         <i class="icon-ban menu-icon"></i>
         <span class="menu-title">Error pages</span>
@@ -93,12 +93,12 @@
           <li class="nav-item"> <a class="nav-link" href="{{url_for('admin_blueprint.admin_error_500')}}"> 500 </a></li>
         </ul>
       </div>
-    </li>
-    <li class="nav-item">
+    </li> -->
+    <!-- <li class="nav-item">
       <a class="nav-link" href="{{url_for('admin_blueprint.admin_documentation')}}">
         <i class="icon-paper menu-icon"></i>
         <span class="menu-title">Documentation</span>
       </a>
-    </li>
+    </li> -->
   </ul>
 </nav>
