--- a/app/home/templates/layouts/enroll_main.html
+++ b/app/home/templates/layouts/enroll_main.html
@@ -23,6 +23,7 @@
 	<link rel="stylesheet" href="../static/css/bootstrap-theme.css" media="screen">
 	<link rel="stylesheet" href="../static/css/main.css">
 
+	<link href="../static/vendor/dropify/dropify.min.css" type="text/css" rel="stylesheet" />
 	<link href="../static/vendor/formValidation/tachyons.min.css" type="text/css" rel="stylesheet" />
 	<link href="../static/vendor/formValidation/formValidation.min.css" type="text/css" rel="stylesheet" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -58,6 +59,7 @@
 	<script src="../static/js/headroom.min.js"></script>
 	<script src="../static/js/jQuery.headroom.min.js"></script>
 	<script src="../static/js/template.js"></script>
+	<script src="../static/vendor/dropify/dropify.min.js"></script>
 
 	<script src="../static/vendor/formValidation/es6-shim.min.js"></script>
 	<script src="../static/vendor/formValidation/formValidation.min.js"></script>
