--- a/app/home/templates/signin.html
+++ b/app/home/templates/signin.html
@@ -23,7 +23,7 @@
 			 <div class="col-md-6 col-md-offset-3 col-sm-6	 col-sm-offset-2"> 
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<h1 class="well" style="font-family: 'Neuton', serif; text-align: center;">ADMIN LOGIN</h1>
+						<h1 class="well" style="font-family: 'Neuton', serif; text-align: center; margin-top: 10px;">ADMIN LOGIN</h1>
 						<hr>
 						    <div class="well">
 								<form>
@@ -38,7 +38,7 @@
 										<br>
 									<hr>
 										<br>
-									<div class="row">
+									<div class="row" style="margin-top: -32px;">
 										<div class="col-lg-8">
 											<b><a href="">Forgot password?</a></b>
 										</div>
