--- a/app/admin/templates/layouts/admin_main.html
+++ b/app/admin/templates/layouts/admin_main.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="../static/admin_css/vertical-layout-light/style.css">
     <!-- endinject -->
     <link rel="shortcut icon" href="../static/admin_images/favicon.png" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     {% block stylesheets %}{% endblock stylesheets %}
 </head>
 
@@ -45,6 +47,11 @@
 
 
     <!-- plugins:js -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+		crossorigin="anonymous"></script>
     <script src="../static/admin_vendors/js/vendor.bundle.base.js"></script>
     <!-- endinject -->
     <!-- Plugin js for this page -->
