--- a/app/admin/templates/pages/user-management/add-new-user.html
+++ b/app/admin/templates/pages/user-management/add-new-user.html
@@ -3,7 +3,8 @@
 {% block title %} Dashboard For Bank Users {% endblock title %}
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 {% endblock stylesheets %}
 
 {% block content %}
@@ -27,7 +28,7 @@
                
                  
                      
-                          <form action="/users-management/save-user" id="user-form">
+                          <form action="" id="user-form">
                           <div class="modal-header">
                               <h5 class="modal-title" id="exampleModalLongTitle">Create New User</h5>
                             
@@ -61,27 +62,12 @@
                                               <select name="role" id="role" class="form-control">
                                                   <option value="">Select Role</option>
                                                   <option value="admin">Administrator</option>
-                                                  <option value="bank">Bank User</option>
-                                                  <option value="bank_manager">Bank Manager</option>
+                                                  <option value="normal">Normal User</option>
                                               </select>
                                           </div>
                                       </div>
                                   </div>
-                                  <div class="row" id="bank_div" style="display: none;">
-                                      <div class="col-lg-6">
-                                          <div class="form-group">
-                                              <label class="form-control-label" for="bank_name">Select Bank</label>
-                                              <select name="bank_name" id="bank_name" class="form-control">
-                                                  <option value="">Select Bank</option>
-                                                  <option value="BOB">BOBL</option>
-                                                  <option value="BNB">BNBL</option>
-                                                  <option value="TBANK">T-Bank</option>
-                                                  <option value="DPNB">Druk PNBL</option>
-                                                  <option value="BDB">BDBL</option>
-                                              </select>
-                                          </div>
-                                      </div>
-                                  </div>
+                                
                               </div>
                           </div>
                           <div class="modal-footer">
@@ -115,4 +101,31 @@
 
 <!-- Specific JS goes HERE -->
 {% block javascripts %}
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+crossorigin="anonymous"></script>
+<script>
+      $("#save").on("click", function(){
+          alert("hi")
+        var form_data = new FormData($('#user-form')[0])
+        $.ajax({
+            type: 'POST',
+            url: '/save-user',
+            data: form_data,
+            dataType: "json",
+            contentType: false,
+            cache: false,
+            processData: false,
+            
+            success: function(res){
+                swal({title: "User saved successfully", text: "Click OK to continue", type: "success"})
+                .then(()=>{
+                    $('#user-form').trigger('reset')
+                })
+            }
+        });
+    });
+</script>
 {% endblock javascripts %}
