--- a/app/admin/templates/pages/user-management/add-new-user.html
+++ b/app/admin/templates/pages/user-management/add-new-user.html
@@ -4,7 +4,7 @@
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 {% endblock stylesheets %}
 
 {% block content %}
@@ -18,78 +18,85 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
 
 <!-- partial -->
 <div class="main-panel">
-  <div class="content-wrapper">
-    <div class="row">
-      <div class="col-12 grid-margin stretch-card">
-        <div class="card">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="card-body">
-               
-                 
-                     
-                          <form action="" id="user-form">
-                          <div class="modal-header">
-                              <h5 class="modal-title" id="exampleModalLongTitle">Create New User</h5>
-                            
-                          </div>
-                          <div class="modal-body">
-                              <div class="pl-lg-4">
-                                  <div class="row">
-                                      <div class="col-lg-6">
-                                          <div class="form-group">
-                                              <label class="form-control-label" for="username">Username</label>
-                                              <input type="text" name="username" id="username" class="form-control" placeholder="Username" autocomplete="off">
-                                          </div>
-                                      </div>
-                                      <div class="col-lg-6">
-                                          <div class="form-group">
-                                              <label class="form-control-label" for="email">Email address</label>
-                                              <input type="email" name="email" id="email" class="form-control" placeholder="email address" autocomplete="off">
-                                          </div>
-                                      </div>
-                                  </div>
-                                  <div class="row">
-                                      <div class="col-lg-6">
-                                          <div class="form-group">
-                                              <label class="form-control-label" for="password">Password</label>
-                                              <input type="password" name="password" id="password" class="form-control" autocomplete="off">
-                                          </div>
-                                      </div>
-                                      <div class="col-lg-6">
-                                          <div class="form-group">
-                                              <label class="form-control-label" for="role">Role</label>
-                                              <select name="role" id="role" class="form-control">
-                                                  <option value="">Select Role</option>
-                                                  <option value="admin">Administrator</option>
-                                                  <option value="normal">Normal User</option>
-                                              </select>
-                                          </div>
-                                      </div>
-                                  </div>
-                                
-                              </div>
-                          </div>
-                          <div class="modal-footer">
-                              
-                              <button type="button" id="save" class="btn btn-primary">Save</button>
-                          </div>
-                      </form>
-                      
-                 
-             
-              </div>
+    <div class="content-wrapper">
+        <div class="row">
+            <div class="col-12 grid-margin stretch-card">
+                <div class="card">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card-body">
+
+
+
+                                <form action="" id="user-form">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLongTitle">Create New User</h5>
+
+                                    </div>
+                                    <div class="modal-body">
+                                        <div class="pl-lg-4">
+                                            <div class="row">
+                                                <div class="col-lg-6">
+                                                    <div class="form-group">
+                                                        <label class="form-control-label"
+                                                            for="username">Username</label>
+                                                        <input type="text" name="username" id="username"
+                                                            class="form-control" placeholder="Username"
+                                                            autocomplete="off">
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-6">
+                                                    <div class="form-group">
+                                                        <label class="form-control-label" for="email">Email
+                                                            address</label>
+                                                        <input type="email" name="email" id="email" class="form-control"
+                                                            placeholder="email address" autocomplete="off">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-lg-6">
+                                                    <div class="form-group">
+                                                        <label class="form-control-label"
+                                                            for="password">Password</label>
+                                                        <input type="password" name="password" id="password"
+                                                            class="form-control" autocomplete="off">
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-6">
+                                                    <div class="form-group">
+                                                        <label class="form-control-label" for="role">Role</label>
+                                                        <select name="role" id="role" class="form-control">
+                                                            <option value="">Select Role</option>
+                                                            <option value="admin">Administrator</option>
+                                                            <option value="normal">Normal User</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+
+                                        <button type="button" id="save" class="btn btn-primary">Save</button>
+                                    </div>
+                                </form>
+
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
+
         </div>
-      </div>
-
     </div>
-  </div>
-  <!-- content-wrapper ends -->
-  <!-- partial:../../partials/_footer.html -->
+    <!-- content-wrapper ends -->
+    <!-- partial:../../partials/_footer.html -->
 
-  <!-- partial -->
+    <!-- partial -->
 </div>
 <!-- main-panel ends -->
 
@@ -102,30 +109,34 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
 <!-- Specific JS goes HERE -->
 {% block javascripts %}
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-crossorigin="anonymous"></script>
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script>
-      $("#save").on("click", function(){
-          alert("hi")
-        var form_data = new FormData($('#user-form')[0])
+    $("#save").on("click", function () {
+        var form = document.getElementById("user-form");
+        var data = new FormData(form);
         $.ajax({
             type: 'POST',
             url: '/save-user',
-            data: form_data,
-            dataType: "json",
+            data: data,
             contentType: false,
             cache: false,
             processData: false,
-            
-            success: function(res){
-                swal({title: "User saved successfully", text: "Click OK to continue", type: "success"})
-                .then(()=>{
-                    $('#user-form').trigger('reset')
-                })
-            }
+
+            success: function (res) {
+                swal("Information successfully saved", "Click Ok to continue", "success")
+                    .then(function () {
+                        $('#user-form').trigger('reset')
+                        window.location = "/admin-dropdowns"
+                    })
+
+            },
         });
     });
 </script>
+
+
 {% endblock javascripts %}
