--- a/app/admin/templates/partials/_sidebar.html
+++ b/app/admin/templates/partials/_sidebar.html
@@ -20,18 +20,18 @@
         </ul>
       </div>
     </li>
-    <!-- <li class="nav-item">
+    <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements">
         <i class="icon-columns menu-icon"></i>
-        <span class="menu-title">Form elements</span>
+        <span class="menu-title">Registration</span>
         <i class="menu-arrow"></i>
       </a>
       <div class="collapse" id="form-elements">
         <ul class="nav flex-column sub-menu">
-          <li class="nav-item"><a class="nav-link" href="{{url_for('admin_blueprint.admin_basic_elements')}}">Basic Elements</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{url_for('admin_blueprint.admin_basic_elements')}}">Registered Students</a></li>
         </ul>
       </div>
-    </li> -->
+    </li>
     <!-- <li class="nav-item">
       <a class="nav-link" data-toggle="collapse" href="#charts" aria-expanded="false" aria-controls="charts">
         <i class="icon-bar-graph menu-icon"></i>
