--- a/app/admin/templates/pages/user-management/add-new-user.html
+++ b/app/admin/templates/pages/user-management/add-new-user.html
@@ -130,7 +130,7 @@
                 swal("Information successfully saved", "Click Ok to continue", "success")
                     .then(function () {
                         $('#user-form').trigger('reset')
-                        window.location = "/admin-dropdowns"
+                        window.location = "/admin-user-list"
                     })
 
             },
