--- a/app/admin/templates/pages/forms/basic_elements.html
+++ b/app/admin/templates/pages/forms/basic_elements.html
@@ -1,75 +1,147 @@
 {% extends 'layouts/admin_main.html' %}
 
-{% block title %} Dashboard For Bank Users {% endblock title %} 
+{% block title %} Dashboard For Bank Users {% endblock title %}
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 {% endblock stylesheets %}
 
 {% block content %}
-    <!-- partial:../../partials/_navbar.html -->
-    
-    <!-- partial -->
-   
-      <!-- partial:../../partials/_settings-panel.html -->
-      
-     
-      <!-- partial -->
-      <!-- partial:../../partials/_sidebar.html -->
-     
-      <!-- partial -->
-      <div class="main-panel">        
-        <div class="content-wrapper">
-          <div class="row">
-            <div class="col-12 grid-margin stretch-card">
-              <div class="card">
-                <div class="card-body">
-                    <table class="table table-striped tabe-bordered" style="width:100%">
-                      <thead>
-                        <tr>
-                          <td>SL</td>
-                          <td>INDEX NUMBER</td>
-                          <td>STUDENT NAME</td>
-                          <td>CID</td>
-                          <td>EMAIL</td>
-                          <td>ACTION</td>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td>1</td>
-                          <td>gfffgd</td>
-                          <td>cdddd</td>
-                          <td>cnsv</td>
-                          <td>fdj</td>
-                          <td width="130">
-                              <a href="#" class="btn btn-secondary btn-sm">view</a>
-                          </td>
-                        </tr>
-                      </tbody>
+<!-- partial:../../partials/_navbar.html -->
 
-                    </table>            
-                </div>
+<!-- partial -->
+
+<!-- partial:../../partials/_settings-panel.html -->
+
+
+<!-- partial -->
+<!-- partial:../../partials/_sidebar.html -->
+
+<!-- partial -->
+<div class="main-panel">
+  <div class="content-wrapper">
+    <div class="row">
+      <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Student Application List</h4>
+            <hr>
+            <div class="card-body">
+              <div class="row">
+                  <div class="table-responsive">
+                      <table class="table align-items-center table-flush" id="customerList">
+                          <thead class="thead-light">
+                          <tr>
+                              <th scope="col" class="sort" data-sort="name">SL</th>
+                              <th scope="col" class="sort" data-sort="name">Index Number</th>
+                              <th scope="col" class="sort" data-sort="name">Student Name</th>
+                              <th scope="col" class="sort" data-sort="budget">CID</th>
+                              <th scope="col">action</th>
+                          </tr>
+                          </thead>
+                          <tbody class="list">
+                           
+                                <tr>
+                                    <th scope="row">
+                                      
+                                    </th>
+                                    <th scope="row">
+                                       
+                                    </th>
+                                    <td class="budget">
+                                       
+                                    </td>
+                                    <td class="budget">
+                                     
+                                    </td>
+                                    
+                                    <td class="text-right">
+                                        <div class="dropdown">
+                                            <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                <i class="fas fa-ellipsis-v"></i>
+                                            </a>
+                                            <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
+                                               
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                      
+                            </tbody>
+                      </table>
+
+                  </div>
+
               </div>
-            </div>
+          </div>
           </div>
         </div>
       </div>
-        <!-- content-wrapper ends -->
-        <!-- partial:../../partials/_footer.html -->
-       
-        <!-- partial -->
-      <!-- main-panel ends -->
-    
-    <!-- page-body-wrapper ends -->
+    </div>
+  </div>
+</div>
+<!-- content-wrapper ends -->
+<!-- partial:../../partials/_footer.html -->
 
-  <!-- container-scroller -->
-  <!-- plugins:js -->
- 
+<!-- partial -->
+<!-- main-panel ends -->
+
+<!-- page-body-wrapper ends -->
+
+<!-- container-scroller -->
+<!-- plugins:js -->
+
 
 {% endblock content %}
 
-  <!-- Specific JS goes HERE --> 
-  {% block javascripts %}
-  {% endblock javascripts %}
+<!-- Specific JS goes HERE -->
+{% block javascripts %}
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script>
+   $(document).ready(function() {
+        loadUsers()
+    });
+  function loadUsers(){
+        $('#customerList').DataTable({
+            'processing': true,
+            'serverSide': true,
+            'bDestroy': true,
+            'serverMethod': 'POST',
+            // 'ajax': {
+            //     'url':'/users'
+            // },
+            'columns': [
+                { data: 'sl' },
+                { data: 'username' },
+                { data: 'email' },
+                { data: 'role' },
+                {
+                "render": function(data, type, full, meta) {
+                    return '<div class="dropdown">'+
+                        '<a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">'+
+                            '<i class="fas fa-ellipsis-v"></i>'+
+                        '</a>'+
+                        '<div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">'+
+                            '<a class="dropdown-item" href="/user/'+full.id+'">View</a>'+
+                            '<a class="dropdown-item" href="javascript:void(0)" onclick="deleteUser('+full.id+')">Delete</a>'+
+                        '</div>'+
+                    '</div>'
+                }
+                },
+            ],
+            language: {
+            paginate: {
+                next: '&#8594;', // or '→'
+                previous: '&#8592;' // or '←' 
+            }
+            },
+            "ordering": false
+        });
+    }
+</script>
 
+  {% endblock javascripts %}
