--- a/app/admin/templates/layouts/admin_main.html
+++ b/app/admin/templates/layouts/admin_main.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../static/admin_vendors/feather/feather.css">
     <link rel="stylesheet" href="../static/admin_vendors/ti-icons/css/themify-icons.css">
     <link rel="stylesheet" href="../static/admin_vendors/css/vendor.bundle.base.css">
+    <link rel="stylesheet" href="../static/admin_scss/vertical-layout-light/_sidebar.scss">
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <link rel="stylesheet" href="../static/admin_vendors/datatables.net-bs4/dataTables.bootstrap4.css">
