--- a/app/home/static/admin_scss/vertical-layout-light/_sidebar.scss
+++ b/app/home/static/admin_scss/vertical-layout-light/_sidebar.scss
@@ -116,7 +116,7 @@
             i {
               &.menu-arrow {
                 &::before {
-                  // content: "\e64b";
+                  content: "\e64b";
                 }
               }
             }
