--- a/app/admin/templates/pages/user-management/user-list.html
+++ b/app/admin/templates/pages/user-management/user-list.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/admin_main.html' %}
 
-{% block title %} Dashboard For Bank Users {% endblock title %} 
+{% block title %} Dashboard For Bank Users {% endblock title %}
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -8,106 +8,111 @@
 {% endblock stylesheets %}
 
 {% block content %}
-    <!-- partial:../../partials/_navbar.html -->
-    <!-- partial -->
-    
-      <!-- partial:../../partials/_settings-panel.html -->
-      <!-- partial -->
-      <!-- partial:../../partials/_sidebar.html -->
-      <!-- partial -->
-      <div class="main-panel">
-        <div class="content-wrapper">
-          <div class="row">
+<!-- partial:../../partials/_navbar.html -->
+<!-- partial -->
+
+<!-- partial:../../partials/_settings-panel.html -->
+<!-- partial -->
+<!-- partial:../../partials/_sidebar.html -->
+<!-- partial -->
+<div class="main-panel">
+    <div class="content-wrapper">
+        <div class="row">
             <div class="col-lg-12 grid-margin">
-              <div class="card">
-                <div class="card-body">
-                  <h4 class="card-title">User List</h4>
-                  <hr>
-                  <div class="card-body">
-                    <div class="row">
-                        <div class="table-responsive">
-                            <table class="table align-items-center table-flush" id="customerList">
-                                <thead class="thead-light">
-                                <tr>
-                                    <th scope="col" class="sort" data-sort="name">SL</th>
-                                    <th scope="col" class="sort" data-sort="name">Username</th>
-                                    <th scope="col" class="sort" data-sort="name">Email</th>
-                                    <th scope="col" class="sort" data-sort="budget">roles</th>
-                                    <th scope="col">action</th>
-                                </tr>
-                                </thead>
-                                <tbody class="list">
-                                  {% for user in users %}
-                                      <tr>
-                                          <th scope="row">
-                                              {{ loop.index }}
-                                          </th>
-                                          <th scope="row">
-                                              {{ user.username }}
-                                          </th>
-                                          <td class="budget">
-                                              {{ user.email}}
-                                          </td>
-                                          <td class="budget">
-                                              {{ user.role }}
-                                          </td>
-                                          
-                                          <td class="text-right">
-                                              <div class="dropdown">
-                                                  <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                      <i class="fas fa-ellipsis-v"></i>
-                                                  </a>
-                                                  <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                                      <a class="dropdown-item" href="/user/{{ user.user_id }}">View</a>
-                                                      <a class="dropdown-item" href="javascript:void(0)" onclick="deleteUser('{{ user.user_id }}')">Delete</a>
-                                                  </div>
-                                              </div>
-                                          </td>
-                                      </tr>
-                                  {% endfor %}
-                                  </tbody>
-                            </table>
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">User List</h4>
+                        <hr>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="table-responsive">
+                                    <table class="table align-items-center table-flush" id="customerList">
+                                        <thead class="thead-light">
+                                            <tr>
+                                                <th scope="col" class="sort" data-sort="name">SL</th>
+                                                <th scope="col" class="sort" data-sort="name">Username</th>
+                                                <th scope="col" class="sort" data-sort="name">Email</th>
+                                                <th scope="col" class="sort" data-sort="budget">roles</th>
+                                                <th scope="col">action</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody class="list">
+                                            {% for user in users %}
+                                            <tr>
+                                                <th scope="row">
+                                                    {{ loop.index }}
+                                                </th>
+                                                <th scope="row">
+                                                    {{ user.username }}
+                                                </th>
+                                                <td class="budget">
+                                                    {{ user.email}}
+                                                </td>
+                                                <td class="budget">
+                                                    {{ user.role }}
+                                                </td>
 
+                                                <td class="text-right">
+                                                    <div class="dropdown">
+                                                        <a class="btn btn-sm btn-icon-only text-light" href="#"
+                                                            role="button" data-toggle="dropdown" aria-haspopup="true"
+                                                            aria-expanded="false">
+                                                            <i class="fas fa-ellipsis-v"></i>
+                                                        </a>
+                                                        <div
+                                                            class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
+                                                            <a class="dropdown-item"
+                                                                href="/user/{{ user.user_id }}">View</a>
+                                                            <a class="dropdown-item" href="javascript:void(0)"
+                                                                onclick="deleteUser('{{ user.user_id }}')">Delete</a>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                            {% endfor %}
+                                        </tbody>
+                                    </table>
+
+                                </div>
+
+                            </div>
                         </div>
-
                     </div>
                 </div>
-                </div>
-              </div>
             </div>
-          </div>
         </div>
-        <!-- content-wrapper ends -->
-        <!-- partial:../../partials/_footer.html -->
-        
-        <!-- partial -->
-      </div>
-      <!-- main-panel ends -->
-  
-    <!-- page-body-wrapper ends -->
-  <!-- container-scroller -->
-  <!-- plugins:js -->
-  {% endblock content %}
+    </div>
+    <!-- content-wrapper ends -->
+    <!-- partial:../../partials/_footer.html -->
 
-  <!-- Specific JS goes HERE --> 
-  {% block javascripts %}
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    <!-- partial -->
+</div>
+<!-- main-panel ends -->
+
+<!-- page-body-wrapper ends -->
+<!-- container-scroller -->
+<!-- plugins:js -->
+{% endblock content %}
+
+<!-- Specific JS goes HERE -->
+{% block javascripts %}
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <script>
-      $(document).ready(function() {
+<script>
+    $(document).ready(function () {
         loadUsers()
     });
-    function loadUsers(){
+    function loadUsers() {
         $('#customerList').DataTable({
             'processing': true,
             'serverSide': true,
             'bDestroy': true,
             'serverMethod': 'POST',
             'ajax': {
-                'url':'/users'
+                'url': '/users'
             },
             'columns': [
                 { data: 'sl' },
@@ -115,28 +120,62 @@
                 { data: 'email' },
                 { data: 'role' },
                 {
-                "render": function(data, type, full, meta) {
-                    return '<div class="dropdown">'+
-                        '<a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">'+
-                            '<i class="fas fa-ellipsis-v"></i>'+
-                        '</a>'+
-                        '<div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">'+
-                            '<a class="dropdown-item" href="/user/'+full.id+'">View</a>'+
-                            '<a class="dropdown-item" href="javascript:void(0)" onclick="deleteUser('+full.id+')">Delete</a>'+
-                        '</div>'+
-                    '</div>'
-                }
+                    "render": function (data, type, full, meta) {
+                        return '<div class="dropdown">' +
+                            '<a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background:orange">' +
+                            '<i class="fas fa-ellipsis-v"><b>Click</b></i>' +
+                            '</a>' +
+                            '<div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">' +
+                            '<a class="dropdown-item" href="/user/' + full.id + '">View</a>' +
+                            '<a class="dropdown-item" href="javascript:void(0)" onclick="deleteUser(' + full.id + ')">Delete</a>' +
+                            '</div>' +
+                            '</div>'
+                    }
                 },
             ],
             language: {
-            paginate: {
-                next: '&#8594;', // or '→'
-                previous: '&#8592;' // or '←' 
-            }
+                paginate: {
+                    next: '&#8594;', // or '→'
+                    previous: '&#8592;' // or '←' 
+                }
             },
             "ordering": false
         });
     }
-  </script>
-  {% endblock javascripts %}
 
+
+    // for deleting
+    function deleteUser(id) {
+        swal({
+            title: "Are you sure?",
+            text: "You will not be able to recover this data!",
+            type: "warning",
+            showCancelButton: true,
+            showConfirmButton: true
+        }).then(function (isConfirm) {
+            if (isConfirm.value == true) {
+                $.ajax({
+                    url: '/delete/' + id,
+                    type: 'POST',
+                    success: function () {
+                        swal({
+                            title: 'Success!',
+                            text: 'User delete successful!',
+                            type: 'success'
+                        }).then(function () {
+                            loadUsers();
+                        });
+                    },
+                    error: function () {
+                        swal("Error", "Error while deleting user. Refresh page and try again :)", "error");
+                    }
+                })
+
+            } else {
+                swal("Cancelled", "Your data is safe :)", "error");
+            }
+        })
+    }
+
+</script>
+{% endblock javascripts %}
